tests/sksl/errors/ReturnTypeMismatch.dsl.glsl
### Compilation failed:

error: expected 'int', but found 'float'

1 error
